--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
             "database/factories"
         ],
         "files": [
-            "app/helpers.php"
+            "app/helpers.php",
+            "app/helpersServicio.php"
         ]
     },
     "autoload-dev": {
