--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
             "database/factories"
         ],
         "files": [
-            "app/helpers.php"
+            "app/helpers.php",
+            "app/funcionesHorario.php"
         ]
     },
     "autoload-dev": {
@@ -63,7 +64,8 @@
             "Tests\\": "tests/"
         },
         "files":[
-            "app/helpers.php"
+            "app/helpers.php",
+            "app/funcionesHorario.php"
         ]
     },
     "minimum-stability": "dev",
